# QGISMap

./: CMakeLists.txt  CMakeLists.txt.user.0893630  MoscowRiver.shp  MoscowRiver.shx  README.md  TestSave.csv  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.py  moscowgeojson.shp
